--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.0",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "bower-asset/bootstrap-pincode-input": "1.7.0"
+        "yiisoft/yii2-bootstrap4": "~2.0.8",
+        "bower-asset/bootstrap-pincode-input": "2.1.0"
     },
     "autoload": {
         "psr-4": {
